--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "yup": "^1.2.0"
   },
   "browserslist": [
     "last 10 Chrome versions"
