Add : updated dynamic images link from api

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/namastedev/namaste-react-live.git"
   },
-  "author": "Akshay Saini",
+  "author": "Hitu ",
   "license": "ISC",
   "bugs": {
     "url": "https://bitbucket.org/namastedev/namaste-react-live/issues"
